object deletion now inherits from change set member

--- a/smile-topology-open-api-spec.yml
+++ b/smile-topology-open-api-spec.yml
@@ -54,7 +54,9 @@ components:
               $ref: '#/components/schemas/IdentifiedObject'
       additionalProperties: false
     ObjectDeletion:
-      type: object
+      allOf:
+        - $ref: '#/components/schemas/ChangeSetMember'
+        - type: object
       additionalProperties: false
     ObjectModification:
       type: object
