now inherits from CIM.Core Identified object

--- a/example/example.csproj
+++ b/example/example.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CIM.Cson" Version="0.3.0" />
     <PackageReference Include="newtonsoft.json" Version="13.0.3" />
   </ItemGroup>
 
